# GitPry

./: .gitignore  .gitpry.example.toml  README.md  pyproject.toml
gitpry/: __init__.py  config.py  main.py  mcp_server.py
gitpry/git_utils/: __init__.py  blame.py  repository.py  scanner.py
gitpry/llm/: __init__.py  chat_session.py  client.py  prompts.py
gitpry/rag/: __init__.py  chunker.py  embedder.py  query_router.py  vector_store.py
gitpry/utils/: logger.py
scripts/: verify_git.py  verify_llm.py
