[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "git-pry"
version = "0.2.0"
description = "GitPry: Talk to your Git history. Reclaim the Who, When, and Why behind every line of code."
authors = [
    { name = "Yifan Ke" }
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "typer>=0.12.0",
    "rich>=13.7.1",
    "gitpython>=3.1.43",
    "httpx>=0.27.0",
    "tiktoken>=0.6.0",
    "python-dotenv>=1.0.1",
    "lancedb>=0.21.0",
]

[project.scripts]
git-pry = "gitpry.main:cli"
