[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "gitpry"
version = "0.7.0"
description = "GitPry: Talk to Git History with Natural Language."
authors = [
    { name = "Yifan Ke" }
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "typer>=0.12.0",
    "rich>=13.7.1",
    "gitpython>=3.1.43",
    "httpx>=0.27.0",
    "tiktoken>=0.6.0",
    "python-dotenv>=1.0.1",
    "lancedb>=0.21.0",
    "mcp>=1.2.0",
    "tomli>=2.0.1; python_version < '3.11'",
]

[project.scripts]
gitpry = "gitpry.main:cli"
